# typy

./: .gitignore  DEVELOPMENT.md  README.md  SKILL.md  demo.py  pyproject.toml
.github/scripts/: create_issues.py
.github/workflows/: create-issues.yml  docs.yml  examples.yml  lint.yml  publish.yml  release.yml  skill-examples.yml  skill-validate.yml  tests.yml
docs/: api.md  cli.md  conf.py  cookbook.md  design-systems.md  getting-started.md  index.md  llm.md  package-format.md  templates.md
docs/_static/: custom.css
docs/api/: builder.md  content.md  functions.md  index.md  markup.md  templates.md  typst_encoder.md
examples/academic/: academic.py  references.bib
examples/basic/: basic.py
examples/custom/: custom.py  custom.typ
examples/cv/: cv.py
examples/invoice/: invoice.py
examples/legal-brief/: legal_brief.py  manifest.json  template.py
examples/legal-memo/: legal_memo.py  manifest.json  template.py
examples/letter/: letter.py
examples/markdown/: markdown.py
examples/presentation/: presentation.py
examples/report/: report.py
examples/translations/: translations.py
lib/: typy.typ
reference/: packaging.md
scripts/: generate_previews.py  verify_pdf.py
skills/typy/: SKILL.md
skills/typy/examples/: author-python-template.py  author-typst-template.typ  consume-basic.py  consume-custom.py  package-export.sh
skills/typy/reference/: api-cheatsheet.md  packaging.md  template-authoring.md  troubleshooting.md  typst-primer.md
templates/: basic.typ  invoice.typ  letter.typ  presentation.typ  report.typ  template1.typ
tests/unit/: test_academic.py  test_builder.py  test_builtin_template_paths.py  test_cli.py  test_content_markdown.py  test_cv_template.py  test_encoder_integration.py  test_encoder_roundtrip.py  test_functions.py  test_invoice_template.py  test_legal_templates.py  test_letter_template.py  test_markup.py  test_package.py  test_package_metadata.py  test_presentation_template.py  test_report_template.py  test_types.py  test_typs.py  test_verify.py
typy/: __init__.py  builder.py  cli.py  content.py  encodable.py  functions.py  markup.py  package.py  templates.py  typst_encoder.py  verify.py
typy/static/templates/: academic.typ  cv.typ  invoice.typ  legal-brief.typ  legal-memo.typ  legal-theme.typ  letter.typ  presentation.typ  report.typ
