[tool.poetry]
name = "typy"
version = "0.1.2"
description = ""
authors = ["Manuel Goulão <msilvagoulao@gmail.com>"]
readme = "README.md"
packages = [{include = "typy"}]

[tool.poetry.dependencies]
python = "^3.10"
typst = "0.13.7"
pydantic = "^2.11.3"
pandas = { version = ">=2.0,<3.0", optional = true }

[tool.poetry.extras]
pandas = ["pandas"]


[tool.poetry.group.tests.dependencies]
pytest = "^8.3.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
ruff = "^0.15.9"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
