[project]
name = "typy"
version = "0.4.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Manuel Goulão", email = "msilvagoulao@gmail.com" }]
dependencies = [
	"typst==0.13.7",
	"pydantic>=2.11.3,<3.0.0",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0,<3.0"]

[dependency-groups]
tests = ["pytest>=8.3.4,<9.0.0"]
dev = [
	"pre-commit>=4.5.1,<5.0.0",
	"ruff>=0.15.9,<0.16.0",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.setuptools.packages.find]
include = ["typy*"]

[tool.setuptools.package-data]
typy = ["static/*.typ"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
