[project]
name = "typy"
version = "0.8.2"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Manuel Goulão", email = "msilvagoulao@gmail.com" }]

[project.urls]
Homepage = "https://mgoulao.github.io/typy/"
Repository = "https://github.com/mgoulao/typy"
"Bug Tracker" = "https://github.com/mgoulao/typy/issues"
PyPI = "https://pypi.org/project/typy/"

dependencies = [
	"typst>=0.14",
	"pydantic>=2.11.3,<3.0.0",
	"typer>=0.12.0,<1.0.0",
	"rich>=13.0.0,<15.0.0",
]

[project.scripts]
typy = "typy.cli:main"

[project.optional-dependencies]
pandas = ["pandas>=2.0,<3.0"]

[dependency-groups]
tests = ["pytest>=8.3.4,<9.0.0"]
dev = [
	"pre-commit>=4.5.1,<5.0.0",
	"ruff>=0.15.9,<0.16.0",
]
docs = [
	"sphinx>=7.4.7,<8.0.0",
	"myst-parser>=3.0.1,<4.0.0",
	"sphinx-llm>=0.4.0,<1.0.0",
	"furo>=2025.9.25",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.setuptools.packages.find]
include = ["typy*"]

[tool.setuptools.package-data]
typy = ["static/*.typ", "static/templates/*.typ"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
